tests/rosetta/out/Smalltalk/cheryls-birthday.out
/tmp/cheryls-birthday.st:5: parse error, expected ']'
