tests/rosetta/out/Smalltalk/cheryls-birthday.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| monthUnique c x dayUnique monthWithUniqueDay bstr months choices filtered bd filtered2 filtered3 filtered4 |
monthUnique := [:b :list | c := 0.
list do: [:x |.
((x.month = (b at: 'month'))) ifTrue: [
c := (c + 1).
] .
].
.
(c = 1). ].
dayUnique := [:b :list | c := 0.
list do: [:x |.
((x.day = (b at: 'day'))) ifTrue: [
c := (c + 1).
] .
].
.
(c = 1). ].
monthWithUniqueDay := [:b :list | list do: [:x |.
((((x.month = (b at: 'month'))) and: [(dayUnique value: x value: list)])) ifTrue: [
true.
] .
].
.
false. ].
bstr := [:b | months := {''. 'January'. 'February'. 'March'. 'April'. 'May'. 'June'. 'July'. 'August'. 'September'. 'October'. 'November'. 'December'}.
((((months at: b at: 'month') + (' '))) + ((b at: 'day' asString))). ].
choices := {Dictionary from:{'month'->5. 'day'->15}. Dictionary from:{'month'->5. 'day'->16}. Dictionary from:{'month'->5. 'day'->19}. Dictionary from:{'month'->6. 'day'->17}. Dictionary from:{'month'->6. 'day'->18}. Dictionary from:{'month'->7. 'day'->14}. Dictionary from:{'month'->7. 'day'->16}. Dictionary from:{'month'->8. 'day'->14}. Dictionary from:{'month'->8. 'day'->15}. Dictionary from:{'month'->8. 'day'->17}}.
filtered := {}.
choices do: [:bd |.
(monthUnique value: bd value: choices not) ifTrue: [
filtered := filtered copyWith: bd.
] .
].
.
filtered2 := {}.
filtered do: [:bd |.
(monthWithUniqueDay value: bd value: filtered not) ifTrue: [
filtered2 := filtered2 copyWith: bd.
] .
].
.
filtered3 := {}.
filtered2 do: [:bd |.
(dayUnique value: bd value: filtered2) ifTrue: [
filtered3 := filtered3 copyWith: bd.
] .
].
.
filtered4 := {}.
filtered3 do: [:bd |.
(monthUnique value: bd value: filtered3) ifTrue: [
filtered4 := filtered4 copyWith: bd.
] .
].
.
((((filtered4 size)) = 1)) ifTrue: [
Transcript show: ((('Cheryl''s birthday is ') + (bstr value: filtered4 at: 0))) printString; cr.
] ifFalse: [
Transcript show: 'Something went wrong!'; cr.
].
